# github-ci-test

./: README.md  build.yml
.github/: pull_request_template.md
.github/workflows/: build.yml
backend/: .env.example  .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml  test.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 69a1b319ce74_create_users_example.py  887a780a5034_insert_users_example.py
backend/src/: __main__.py  db_context.py
backend/src/controllers/: login.py
backend/src/utils/: database_connection.py
backend/tests/: test_main.py
frontend/: README.md  package.json  pnpm-lock.yaml
